# Jerry-lunch

./: .gitignore  Main.py  README.md  pyproject.toml
Managers/: __init__.py  api.py  cost.py  database.py  insert.py  preferred.py  rank.py  select.py  statistics.py  trend.py  without.py
Model/: lunch_menu.py
pages/: 10_Sync.py  1_Insert.py  2_Select.py  3_Statistics.py  4_Rank.py  5_Preferred.py  6_Cost.py  8_Without.py  9_API.py
src/jerry_lunch/: __init__.py  constants.py
src/jerry_lunch/config/: db_config.py
src/jerry_lunch/managers/: __init__.py  api.py  database.py  insert.py  select.py  sync.py
src/jerry_lunch/models/: __init__.py
